--- a/Eleftheria_Galinou.html
+++ b/Eleftheria_Galinou.html
@@ -47,7 +47,7 @@
 <footer class="clearfix"> 
   
   <a href="projects.html">Portfolio</a>
-  <a href="./About.html">Contact</a>
+  <a href="/About.html">Contact</a>
   
 </footer>
   
