--- a/projects.html
+++ b/projects.html
@@ -15,7 +15,9 @@
   
   <link href="https://fonts.googleapis.com/css?family=Archivo+Narrow|Montserrat" rel="stylesheet">
     
-  <link href="/css/stylesheet.css" type="text/css" rel="stylesheet" />
+  
+  <link href="css/stylesheet.css" type="text/css" rel="stylesheet" />
+  
     
   </head>
   
