add text, photos

--- a/misc.html
+++ b/misc.html
@@ -146,8 +146,9 @@ li a:hover {
    
     </div>
     <div class="col-sm-4"> 
-      <p>tech goes here</p>
-      <img src="tech.jpg" class="img-responsive" style="width:100%" alt="tech">
+      <p>technology</p>
+      <p>I think this is corrolated to my love of cameras somehow. I love gadgets and anything technological. As an Art History major, almost majoring in Photography, I have always loved, shapes, colors, textures and creating with my hands. While I was doing my undergran at UW I was introduced to html. In wanthing to be more creative in my daily professional life, it seems like a logical avenue to follow. This will allow me to use things which I am familiar with visually, to hopefully create aestheically pleasing sites and eventually apps that will be useful to many.</p>
+      <img src="/images/g-loves-his-mac_2944361709_o.jpg" class="img-responsive" style="width:100%" alt="tech">
     </div>
     <div class="col-sm-4"> 
       <p>beach</p>
