--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <footer class="clearfix"> 
   
   <a href="projects.html">Portfolio</a>
-  <a href="/About.html">Contact</a>
+  <a href="/about.html">Contact</a>
   <a href="misc.html">Misc.</a>
   
 </footer>
